cmake_minimum_required(VERSION 2.8)
project(ss)
# SET (CMAKE_AR      "/home/users/zhangfangjie/.jumbo/bin/llvm-ar")
# SET (CMAKE_LINKER  "/home/users/zhangfangjie/.jumbo/bin/llvm-ld")
# SET (CMAKE_NM      "/home/users/zhangfangjie/.jumbo/bin/llvm-nm")
# SET (CMAKE_OBJDUMP "/home/users/zhangfangjie/.jumbo/bin/llvm-objdump")
# SET (CMAKE_RANLIB  "/home/users/zhangfangjie/.jumbo/bin/llvm-ranlib")
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(src/net)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(test)
