cmake_minimum_required(VERSION 2.8)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")

AUX_SOURCE_DIRECTORY(. DIR_SRC)
INCLUDE_DIRECTORIES(../include)
#ADD_EXECUTABLE(test test.cc)
ADD_EXECUTABLE(log_test log_test.cc)
ADD_EXECUTABLE(http_test http_test.cc)
#TARGET_LINK_LIBRARIES(test common)
TARGET_LINK_LIBRARIES(log_test common gtest)
TARGET_LINK_LIBRARIES(http_test common curl)
